fixed navbar behavior on mobile view, still need fix

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 /* ~~~~~~~~~~~~ Main ~~~~~~~~~~~~ */
+
 body {
     overflow: hidden;
     width: 100%;
@@ -30,6 +31,7 @@ body {
 /* ~~~~~~~~~~~~ First page ~~~~~~~~~~~~ */
 
 #header  {
+    display: relative;
     top: 0;
     left: 0;
     font-family: 'Amatic SC', cursive;
@@ -41,10 +43,10 @@ body {
     font-weight: 900;
         }
         p{
-        position:fixed;
+        position:absolute;
         font-size: 0.6em;
         font-weight: 900;
-        margin-left: 120px;
+        margin-left: 80px;
     }
 }
 #stick {
